--- a/music.html
+++ b/music.html
@@ -25,9 +25,9 @@
     <div class="music">
 
         <ul>
-            <li><img src="./images/1.1.png" alt=""></li>
+            <li><img src="./images/1.1.jpg" alt=""></li>
             <li><img src="./images/1.2.png" alt=""></li>
-            <li><img src="./images/1.3.png" alt=""></li>
+            <li><img src="./images/1.3.jpg" alt=""></li>
             <li><img src="./images/1.4.png" alt=""></li>
         </ul>
         <ul>
