--- a/other.html
+++ b/other.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="other">
-        <video src="./video/formal video.mp4" controls >
+        <video src="./video/apple video.mp4" controls >
     </div>
 
 
