--- a/music.html
+++ b/music.html
@@ -74,7 +74,7 @@
 
     </footer>
     </div>
-    <script src="C:\Users\Alex Hu\Desktop\Alex homework\script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
